# emry

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/emry-cli/: Cargo.toml
crates/emry-cli/src/: lib.rs  main.rs
crates/emry-core/: Cargo.toml
crates/emry-core/benches/: ring.rs
crates/emry-core/src/: bus.rs  error.rs  lib.rs  mode.rs  registry.rs  ring.rs  types.rs
crates/emry-engine/: Cargo.toml
crates/emry-engine/benches/: emit.rs
crates/emry-engine/examples/: synthetic_run.rs
crates/emry-engine/src/: anomaly.rs  lib.rs  pipeline.rs  processor.rs  session.rs  stats.rs  throughput.rs
crates/emry-ingest/: Cargo.toml
crates/emry-ingest/src/: lib.rs  socket.rs  watch.rs  wire.rs
crates/emry-py/: Cargo.toml
crates/emry-py/src/: lib.rs
crates/emry-store/: Cargo.toml
crates/emry-store/benches/: jsonl.rs
crates/emry-store/src/: export.rs  lib.rs  meta.rs  runs.rs  sink.rs  test_util.rs  writer.rs
crates/emry-tui/: Cargo.toml
crates/emry-tui/examples/: tui_demo.rs
crates/emry-tui/src/: app.rs  chart.rs  lib.rs  ui.rs
crates/emry-web/: Cargo.toml
crates/emry-web/examples/: web_demo.rs
crates/emry-web/src/: baseline.rs  index.html  lib.rs  server.rs  state.rs
docs/emry/: migration.md  slurm.md
python/emry/: __init__.py  coerce.py  jsonl_backend.py  live.py  mode.py  native_backend.py  phase.py  run.py  socket_backend.py  wire.py
python/tests/: test_coerce.py  test_live.py  test_mode.py  test_native.py  test_run.py  test_socket_backend.py  test_version.py
scripts/: check-coverage.sh  pre-commit-python.sh  pre-commit-rust.sh
