[workspace]
resolver = "2"
members = [
    "crates/emry-core",
    "crates/emry-engine",
    "crates/emry-store",
    "crates/emry-tui",
    "crates/emry-web",
    "crates/emry-ingest",
    "crates/emry-cli",
    "crates/emry-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.87"
repository = "https://github.com/femboyisp/emry"
homepage = "https://github.com/femboyisp/emry"
authors = ["femboyisp contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
rtrb = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "fs"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
pyo3 = { version = "0.23", features = ["abi3-py310"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
