[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "emry"
version = "0.1.0"
description = "Gentle observability for long training runs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "femboyisp contributors" }]
keywords = ["pytorch", "machine-learning", "training", "observability", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "maturin>=1.4,<2",
    "msgpack>=1.0",
]
# Sidecar mode (streaming events to `emry engine` over a socket) needs msgpack.
socket = ["msgpack>=1.0"]
# Tensor coercion is duck-typed (no hard torch import); this extra is a
# convenience for `pip install emry[torch]`.
torch = ["torch"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = [
    "--strict-markers",
    "--cov=emry",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["python/emry"]
omit = ["python/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

# PyO3 / maturin: the native `emry._native` extension is built with
#   maturin develop --features extension-module
# (or via `maturin build` for wheels in EMRY-036). The pip build backend stays
# setuptools so `pip install -e .` works without a Rust toolchain; the native
# module is an optional accelerator the SDK imports if present.
[tool.maturin]
manifest-path = "crates/emry-py/Cargo.toml"
module-name = "emry._native"
python-source = "python"
features = ["extension-module"]
# Bundle the license into the sdist so it sits at the path maturin records in
# the metadata's `License-File: LICENSE` (PyPI rejects the upload otherwise).
include = ["LICENSE"]
