[package]
name = "emry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — CLI binary"

[lints]
workspace = true

[features]
# Enables `emry export parquet` (pulls in arrow + parquet via emry-store).
parquet = ["emry-store/parquet"]

[lib]
name = "emry_cli"
path = "src/lib.rs"

[[bin]]
name = "emry"
path = "src/main.rs"

[dependencies]
clap.workspace = true
emry-core = { path = "../emry-core" }
emry-engine = { path = "../emry-engine" }
emry-store = { path = "../emry-store" }
emry-tui = { path = "../emry-tui" }
emry-web = { path = "../emry-web" }
emry-ingest = { path = "../emry-ingest" }
crossbeam-channel.workspace = true
tokio.workspace = true
