[package]
name = "emry-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-core"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
crossbeam-channel.workspace = true
rtrb.workspace = true

[dev-dependencies]
rmp-serde.workspace = true
criterion.workspace = true

[[bench]]
name = "ring"
harness = false
