[package]
name = "emry-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-engine"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
crossbeam-channel.workspace = true
