[package]
name = "emry-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-engine"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
emry-store = { path = "../emry-store" }
crossbeam-channel.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "emit"
harness = false
