[package]
name = "emry-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-ingest"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
tokio.workspace = true
rmp-serde.workspace = true
