[package]
name = "emry-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — PyO3 bindings"

[lints]
workspace = true

[lib]
name = "emry_py"
crate-type = ["cdylib", "rlib"]

[features]
# Enabled by maturin when building the Python wheel; off for cargo test/clippy
# so the crate links without libpython.
extension-module = ["pyo3/extension-module"]

[dependencies]
emry-core = { path = "../emry-core" }
emry-engine = { path = "../emry-engine" }
pyo3.workspace = true
serde_json.workspace = true
