[package]
name = "emry-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-store"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
serde.workspace = true
serde_json.workspace = true
