[package]
name = "emry-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-tui"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
crossbeam-channel.workspace = true
ratatui.workspace = true

[dev-dependencies]
emry-engine = { path = "../emry-engine" }
uuid.workspace = true
serde_json.workspace = true
