[package]
name = "emry-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-web"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
tokio.workspace = true
