[package]
name = "emry-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Emry training observability — emry-web"

[lints]
workspace = true

[dependencies]
emry-core = { path = "../emry-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
uuid = { workspace = true }
